Add some order routes
